--- a/index.html
+++ b/index.html
@@ -8,8 +8,63 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght,CRSV@100..900,0&display=swap" rel="stylesheet">
   </head>
+ <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #1a1a1a;
+      }
+
+      #app-loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #1a1a1a;
+        z-index: 9999;
+      }
+
+      .loader-logo {
+        font-size: 3rem;
+        font-weight: 700;
+        color: #fbbf24;
+        font-family: 'Geologica', sans-serif;
+        margin-bottom: 2rem;
+        animation: fade-pulse 2s ease-in-out infinite;
+      }
+
+      .loader-spinner {
+        width: 50px;
+        height: 50px;
+        border: 3px solid rgba(251, 191, 36, 0.1);
+        border-top-color: #fbbf24;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+
+      @keyframes fade-pulse {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0.5; }
+      }
+  </style>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Loader que será substituído pelo React -->
+      <div id="app-loader">
+        <div class="loader-logo">📖 VerseApp</div>
+        <div class="loader-spinner"></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
